--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "frontend",
+  "name": "frontend-ktc",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
@@ -8,7 +8,7 @@
     "start": "cross-env NODE_ENV=development gulp",
     "build": "cross-env NODE_ENV=production gulp build"
   },
-  "author": "Artem Petrov <a.petrov@uplab.ru>",
+  "author": "Artem Petrov",
   "license": "ISC",
   "devDependencies": {
     "@babel/core": "^7.0.0-beta.44",
