--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
   },
   "dependencies": {
     "jquery": "^3.3.1",
-    "modernizr": "^3.6.0"
+    "modernizr": "^3.6.0",
+    "waypoints": "^4.0.1"
   }
 }
